Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- span text 'PHARRELLWILLIAMS.COM' -->
         <span>PHARRELLWILLIAMS.COM</span>
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-        <img src="https://learn.co/tracks/fswd-prework-2-0/cli-essentials/html-fundamentals/html-album-cover#"
+        <img src=""
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
         <br>
